# bcut-asr

./: README.md  pyproject.toml
bcut_asr/: __init__.py  orm.py
bcut_tools/: __init__.py  __main__.py  constants.py  errors.py  utils.py
bcut_tools/asr/: __init__.py
bcut_tools/cmds/: asr.py  tts.py
bcut_tools/orms/: asr.py  tts.py
bcut_tools/tts/: __init__.py
